# PIF-rs

./: Cargo.toml  README.md
examples/: simple_painting.rs  vector_logo.rs
src/: archive.rs  bake.rs  directory.rs  error.rs  lib.rs  manager.rs  model.rs  tile.rs
